test/files/neg/macro-invalidusage-parenttype-expands-to-nonclasstype.check
Macros_Test_2.scala:7: error: class type required but T forSome { type T } found
  class D extends Foo(2)
                  ^
one error found
